--- a/src/sass/partials/_nav.scss
+++ b/src/sass/partials/_nav.scss
@@ -2,7 +2,7 @@
   width: 100%;
   height: $header-height;
   position: fixed;
-  z-index: 999;
+  z-index: 901;
 }
 
 .nav {
@@ -72,7 +72,7 @@
   .header {
     position: fixed;
     bottom: 0;
-    z-index: 999;
+    z-index: 901;
     width: 100%;
     height: 35px;
     background-color: black;
